@@ -18,9 +18,29 @@ compileJava {
     ]
 }
 
-dependencies {
-    //compileOnly files("${System.getProperty('java.home')}/../lib/tools.jar")
+compileTestJava {
+    options.compilerArgs = [
+//            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+//            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+//            "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+//            "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+//            "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+//            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+//            "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+    ]
 }
+
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+}
+
+
+test {
+    useJUnitPlatform()
+}
+
 
 jar {
     manifest {
